# SimpleCppProject

./: CMakeLists.txt  CPPLINT.cfg  Makefile
src/: CMakeLists.txt  main.cc  simple.cc  simple.h
test/: CMakeLists.txt  simple_test.cc
